# hermes_observatory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
backend/: config.py  main.py  narrative_generator.py  schema_registry.py
backend/collectors/: __init__.py  agent_activity.py  base.py  checkpoints.py  curator.py  delegate.py  events.py  fs_change.py  gepa.py  kanban.py  memory.py  pending.py  skills.py  state_db.py  state_db_events.py
docs/: demo.html  落地实施文档.md  设计文档.md
frontend/: index.html
plugins/hermes-observatory-hook/: __init__.py  handler.py  plugin.yaml
tests/: test_collectors.py  test_degraded_mode.py  test_registry.py
